fix for 246 regarding styling scrollbars in a modal popup

--- a/app/assets/stylesheets/projects.css
+++ b/app/assets/stylesheets/projects.css
@@ -260,8 +260,8 @@ form.new_project_document {
 }
 
 
-#invite-modal { width: 590px; }
-#invite-modal .private_projects { padding: 10px; }
+#invite-modal { width: 650px; }
+#invite-modal .private_projects { padding: 10px; overflow-y: scroll; height: 400px; }
 #invite-modal .private_projects .search_result { width: auto; vertical-align: middle; margin-bottom: 10px; }
 
 .search_result.manage_access_result {
